Read in multiple files from the file chooser when in openMultiple mode. Fixes bug 255900. r+sr=bryner a=asa